solved scrollbar issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ h3 {
     border-style: solid;
     border-color: black;
     border-width: 0px 1px 0px 0px;
-}
+    }
 
 .footer {
     background-color: #666666;
@@ -98,18 +98,19 @@ h3 {
     color: white;
 }
 
-.body_container {
-    background-image: url(.assets/images/funkylines.png);
-}
+/* .body_container { */
+    /* background-image: url(.assets/images/funkylines.png); */
+/* } */
 
 .body_content {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background-color: #ffffff;
-    margin-top: 0px;
-    padding-top: 70px;
+    margin-top: 100px;
+    margin-bottom: 100px;
     overflow: auto;
     width: 960px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .image_me {
@@ -285,3 +286,6 @@ h3 {
     padding-bottom: 10px;
     font-size: 20px;
 }
+html {
+    overflow-y: scroll;
+  }
